--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">KeepTrack</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="fa_chevron_circle_up">&#xf139;</string>
     <string name="fa_plus_circle">&#xf055;</string>
 
